# aetherion-lite

./: .gitignore  README.md  aetherion.env  aetherion_ideas.md  demo_lite.sh  install_lite.sh  start_aetherion_lite.sh  usage.md  🚀 Aetherion Lite.sh
aetherion-common/: README.md  governance.py  pyproject.toml
aetherion-common/aetherion_common/: __init__.py  enums.py  governance.py  schemas.py
aetherion-common/aetherion_common.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ai_agents/: __init__.py  (+1 more)
ai_agents/bue/: COMPLETE_SYSTEM_SUMMARY.md  EXECUTIVE_SUMMARY.md  FILE_STRUCTURE.md  IMPLEMENTATION_GUIDE.md  INDEX.md  README.md  ai_ml.yaml  bue_agent_config.yaml  bue_child_agent.py  bue_integration.py  bue_parent_agent.py  cybersecurity.yaml  example_usage.py  fintech.yaml  healthtech.yaml  meta_learner.py  pyproject.toml  saas.yaml
ai_agents/ceoa_udoa_uie_ile/: INSTALLATION_GUIDE.md  PACKAGE_INFO.txt  pyproject.toml
ai_agents/ceoa_udoa_uie_ile/aetherion_agents_package/: .env.example  .gitignore  DIRECTORY_STRUCTURE.txt  LICENSE  MANIFEST.txt  README.md  requirements.txt  setup.py
ai_agents/ceoa_udoa_uie_ile/aetherion_agents_package/aetherion_agents/: __init__.py
ai_agents/ceoa_udoa_uie_ile/aetherion_agents_package/aetherion_agents/base/: __init__.py  constitutional_agent.py
ai_agents/ceoa_udoa_uie_ile/aetherion_agents_package/aetherion_agents/ceoa/: __init__.py  ceoa_agent.py
ai_agents/ceoa_udoa_uie_ile/aetherion_agents_package/aetherion_agents/config/: agents_config.yaml
ai_agents/ceoa_udoa_uie_ile/aetherion_agents_package/aetherion_agents/docs/: DEPLOYMENT.md  QUICKSTART.md
ai_agents/ceoa_udoa_uie_ile/aetherion_agents_package/aetherion_agents/examples/: complete_integration.py
ai_agents/ceoa_udoa_uie_ile/aetherion_agents_package/aetherion_agents/ile/: __init__.py  ile_agent.py
ai_agents/ceoa_udoa_uie_ile/aetherion_agents_package/aetherion_agents/tests/: __init__.py  conftest.py  test_ceoa_agent.py
ai_agents/domain_cortex_agents/: pyproject.toml
ai_agents/domain_cortex_agents/domain_cortex/: README.md  __init__.py  config.yaml  examples.py  main.py  requirements.txt
ai_agents/domain_cortex_agents/domain_cortex/agents/: healthcare_agent.py
ai_agents/domain_cortex_agents/domain_cortex/base/: domain_agent.py  engine_clients.py  router.py
ai_agents/domain_cortex_agents/domain_cortex/manifests/: _template.yaml  healthcare.yaml  industries_batch.yaml  technologies_batch.yaml
ai_agents/domain_cortex_agents/domain_cortex/synthetic/: world_generator.py
bue/bue-ultimate/: .env.example  DELIVERY.md  DEPLOYMENT.md  Dockerfile  INDEX.md  PROJECT_SUMMARY.md  README.md  legacy-docker-compose.yml  pyproject.toml  requirements.txt  setup.py
bue/bue-ultimate/bue/: __init__.py
bue/bue-ultimate/bue/adapters/: registry.py
bue/bue-ultimate/bue/api/graphql/: schema.py
bue/bue-ultimate/bue/core/: engine.py
bue/bue-ultimate/bue/forecasting/: time_series_engine.py
bue/bue-ultimate/bue/governance/: validator.py
bue/bue-ultimate/bue/gpu/: cuda_engine.py
bue/bue-ultimate/bue/mesh/: coordinator.py
bue/bue-ultimate/bue/metrics/: engine.py
bue/bue-ultimate/bue/risk/: engine.py
bue/bue-ultimate/bue/streaming/: stream_processor.py
bue/bue-ultimate/bue/wrappers/: domain_cortex_integration.py
bue/bue-ultimate/config/governance_policies/: constitutional.rego
bue/bue-ultimate/config/metrics/: saas.yaml
bue/bue-ultimate/examples/: complete_demo.py
ceoa/ceoa-fixed/: DEPLOYMENT.md  Dockerfile  FILE_STRUCTURE.md  IMPLEMENTATION_SUMMARY.md  README.md  STRUCTURE_EXPLAINED.md  legacy-docker-compose.yml  pyproject.toml
ceoa/ceoa-fixed/backend/: main.py  models.py
ceoa/ceoa-fixed/backend/adapters/: cloud_providers.py
ceoa/ceoa-fixed/backend/carbon/: engine.py
ceoa/ceoa-fixed/backend/observability/: kit.py
ceoa/ceoa-fixed/backend/scheduler/: core.py
ceoa/ceoa-fixed/configs/: scheduler.yaml
ceoa/ceoa-fixed/contracts/: openapi.yaml
ceoa/ceoa-fixed/device-mesh/: ARCHITECTURE.md
ceoa/ceoa-fixed/infra/: README.md
ceoa/ceoa-fixed/policies/: governance.rego
ceoa/ceoa-fixed/tests/: README.md
function-broker/: Dockerfile  README.md  pyproject.toml
function-broker/broker/: __init__.py
function-broker/broker/adapters/: __init__.py  base.py  bue_adapter.py  ceoa_adapter.py  domain_cortex_adapter.py  ile_adapter.py  udoa_adapter.py  uie_adapter.py  urpe_adapter.py
function-broker/broker/api/: main.py
function-broker/broker/config/: capabilities.yaml  settings.py
function-broker/broker/core/: __init__.py  broker_service.py  models.py  registry.py  security.py
function-broker/broker/observability/: __init__.py  logging.py  metrics.py
ile/ile_system/: DEPLOYMENT_GUIDE.md  Dockerfile  FILE_MANIFEST.txt  QUICK_START_EXAMPLE.py  README_COMPLETE.md  STRUCTURE.txt  __init__.py  anomaly_core.py  constitutional_validator.py  database.py  domain_integration.py  ingestion.py  knowledge_graph.py  metrics.py  model_registry.py  models.py  orchestrator.py  pyproject.toml  requirements.txt  rl_engine.py
ile/ile_system/api/: main.py
ile/ile_system/credibility/: source_credibility.py
ile/ile_system/domains/domain1_task_based/: __init__.py  bue_learning_adapter.py  model_update_coordinator.py  reinforcement_learner.py  task_outcome_tracker.py
ile/ile_system/domains/domain2_internet_learning/: __init__.py  credibility_scorer.py  information_extractor.py  knowledge_integrator.py  web_crawler.py
ile/ile_system/domains/domain3_user_interaction/: __init__.py  interaction_learner.py  pattern_recognizer.py  personalization_engine.py
ile/ile_system/domains/domain4_cross_domain/: __init__.py  knowledge_translator.py  pattern_extractor.py  relevance_mapper.py
ile/ile_system/domains/domain5_federated/: __init__.py  federated_client.py  federated_server.py
ile/ile_system/domains/domain6_multi_llm/: __init__.py  ensemble_coordinator.py
ile/ile_system/domains/domain7_function_security/: __init__.py  anomaly_detector.py  request_sanitizer.py  security_learner.py
ile/ile_system/domains/domain_cortex/: __init__.py  meta_learner.py
(+59 files in other folders)
