[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aetherion-bue-agents"
version = "1.0.0"
description = "BUE AI Agents - Parent and Child agents for Business Underwriting Engine"
requires-python = ">=3.11"
dependencies = [
  "aetherion-common>=1.0.0",
  "pydantic>=2.6,<3.0",
  "httpx>=0.27,<0.28",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]

[tool.setuptools]
packages = ["bue_agents"]

[tool.setuptools.package-dir]
bue_agents = "."
