[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aetherion-ceoa-udoa-uie-ile-agents"
version = "1.0.0"
description = "AI Agents for CEOA, UDOA, UIE, and ILE engines"
requires-python = ">=3.11"
dependencies = [
  "aetherion-common>=1.0.0",
  "pydantic>=2.6,<3.0",
  "httpx>=0.27,<0.28",
  "pyyaml>=6.0",
  "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]

[tool.setuptools.packages.find]
where = ["aetherion_agents_package"]
include = ["aetherion_agents*"]
