[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aetherion-domain-cortex-agents"
version = "1.0.0"
description = "Domain Cortex AI Agents - Parent and Child agents for Domain-Specific Intelligence"
requires-python = ">=3.11"
dependencies = [
  "aetherion-common>=1.0.0",
  "pydantic>=2.6,<3.0",
  "httpx>=0.27,<0.28",
  "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["domain_cortex*"]
